--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gatsby": "^3.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^3.8.0"
   }
 }
