--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "gatsby": "^3.6.2",
-    "gatsby-plugin-create-page-html": "0.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^3.10.0"
   }
 }
