--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^3.6.2",
     "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-netlify": "^3.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
